test/parser/gc/gc_missing_rpar.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:7: error: expected ')'
  gc(1;
}
